--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -6,7 +6,7 @@
     <link type="text/css" src="css/teacherUnionClass.css">
     <link rel="icon" href="img/logo_title.png" type="image/x-icon">
     <link rel="shortcut icon" href="img/logo_title.png" type="image/x-icon"/>
-    <script type="application/javascript" src="js/jquery-1.11.2.min.js"></script>
+    <script type="application/javascript" src="js/jquery.min.js"></script>
     <script type="application/javascript" src="js/layer/layer.js"></script>
     <script type="application/javascript" src="js/service.js"></script>
     <style type="text/css">
