--- a/public/schoolClass/openUnionClass.html
+++ b/public/schoolClass/openUnionClass.html
@@ -177,7 +177,7 @@
         }
         //title = encodeURIComponent(title);
         var url = "teacherUnionMaster.html?clazzId="+selectedClazzId+"&userId="+teacherId+"&title="+title+"&livePassword="+password+"&userName="+userName+"&startType=1_n";
-        window.open(url,"_blank");
+        window.open(url,"CLASS_WINDOW");
         window.parent.layer.closeAll();
     }
 
