--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -252,7 +252,7 @@
         }
         var pass = $("#vclass_"+vid).attr("pass");
         if(enterPass == pass){
-            window.open("teacherUninonSlaver.html?userId="+teacherId+"&vid="+vid+"&userName="+teacherName+"&clazzIds="+selectedClazzIds,"_blank");
+            window.open("teacherUninonSlaver.html?userId="+teacherId+"&vid="+vid+"&userName="+teacherName+"&clazzIds="+selectedClazzIds,"CLASS_WINDOW");
             layer.closeAll();
         }else{
             layer.msg("邀请码不正确~");
