--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -11,8 +11,8 @@
 
 <div class="login_box">
 
-<div class="logo">logo</div>
-<div class="tab">
+<div class="logo"><img src="img/logo.png"/>同步课堂</div>
+<div class="tab my_flex">
 <div class="btn_left active" id="account">账号登录</div>
 <div class="btn_right" id="scan">扫码登录</div>
 </div>
