--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -11,7 +11,7 @@
     <script type="application/javascript" src="js/service.js"></script>
     <style type="text/css">
         body{
-
+            margin: 0;
             background-color: #F6F6F6;
         }
         .layui-layer-title{
@@ -48,7 +48,7 @@
             color: #666;
             font-size: 14px;
             line-height: 20px;
-            padding: 20px 18px;
+            padding: 20px 18px 20px 0;
             border-bottom: 1px #E5E5E5 solid;
         }
         .item:last-child{
