--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -9,41 +9,39 @@
 
 <div class="nav">
 
-<div class="logo">logo</div>
+<div class="logo"><img src="img/icon_yunClassLogo.png"/></div>
 
 <div class="userInfo">
-
-    <div class="avatar">
-        <img id="user_avatar" src="" alt="">
+    <div class="my_flex">
+        <div class="avatar">
+            <img id="user_avatar" src="" alt="">
+        </div>
+        <div class="username"></div>
+        <div class="exit">退出</div>
     </div>
-    <div class="username"></div>
-    <div class="exit">退出</div>
-
-</div>
-
-</div>
-
-
-
-<div class="left_box">
-
-<div id="classInfo" class="active">课程信息</div>
-<div id="myFile">我的课件</div>
 
 
 </div>
 
-
-<div class="right_box">
-<!--课程信息 -->
-<div class="classInfo_box">
-<iframe id="classInfo_iframe" src="" frameborder="0"></iframe>
-</div>
-<!--我的课件 -->
-<div class="myFile_box">
-<iframe id="myFile_iframe" src="" frameborder="0"></iframe>
 </div>
 
+
+<div class="box_cont">
+    <div class="left_box">
+
+        <div id="classInfo" class="active">课程信息</div>
+        <div id="myFile">我的课件</div>
+    </div>
+    <div class="right_box">
+        <!--课程信息 -->
+        <div class="classInfo_box">
+            <iframe id="classInfo_iframe" src="" frameborder="0"></iframe>
+        </div>
+        <!--我的课件 -->
+        <div class="myFile_box">
+            <iframe id="myFile_iframe" src="" frameborder="0"></iframe>
+        </div>
+</div>
 
 
 </div>
@@ -60,7 +58,9 @@ $(function(){
     var teacherId = Service.getQueryString("teacherId");
     var teacherName = Service.getQueryString("teacherName");
     getUserById();
-    $('#classInfo_iframe').attr('src','https://www.maaee.com/openvidu/schoolClass/unionClassList.html?teacherId='+teacherId+'&teacherName='+teacherName+'')
+
+        $('#classInfo_iframe').attr('src','http://127.0.0.1:5000/schoolClass/unionClassList.html?teacherId='+teacherId+'&teacherName='+teacherName+'')
+    // $('#classInfo_iframe').attr('src','https://www.maaee.com/openvidu/schoolClass/unionClassList.html?teacherId='+teacherId+'&teacherName='+teacherName+'')
     $('#myFile_iframe').attr('src','http://192.168.50.29:8091/#/antPlate?ident='+teacherId+'&fileId=-1&title=蚁盘题目&phoneType=0')
 
     $('#classInfo').on('click',function(){
