--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -10,35 +10,47 @@
     <script type="application/javascript" src="js/layer/layer.js"></script>
     <script type="application/javascript" src="js/service.js"></script>
     <style type="text/css">
-        body{
+        body,html{
             margin: 0;
-            background-color: #F6F6F6;
+            background-color: #ECEFF8;
+            overflow: hidden;
+            height: 100%;
         }
         .layui-layer-title{
             font-size: 16px !important;
+        }
+        .topDiv{
+            overflow: hidden;
+            border-bottom: 1px #E6E6E6 solid;
+            padding: 25px 36px 0;
+        }
+        .topDiv h1{
+            color: #333333;
+            font-size: 22px;
+            float: left;
+            margin: 0;
         }
         .courseBtn{
             padding: 0 9px 0 33px;
             height: 42px;
             line-height: 42px;
             color:#fff;
-            background: #0084FF url("img/icon_add_course.png") no-repeat 10px center;
+            background: #0054FF url("img/icon_add_course.png") no-repeat 10px center;
             background-size: 16px;
             -webkit-border-radius: 4px;
             -moz-border-radius: 4px;
             border-radius: 4px;
-            display: inline-block;
-            margin: 6px 0 14px 45px;
+            float: right;
 
         }
         #item_container{
-            background-color: white;
-            height: calc(100% - 70px);
+            height: calc(100% - 68px);
             overflow-y: scroll;
-            padding-left: 45px;
-
+            padding-left: 32px;
+            padding-right: 20px;
         }
         .item{
+            position: relative;
             /*-webkit-display:  flex;*/
             /*-moz-display: flex;*/
             /*-ms-display:  flex;*/
@@ -48,19 +60,26 @@
             color: #666;
             font-size: 14px;
             line-height: 20px;
-            padding: 20px 18px 20px 0;
-            border-bottom: 1px #E5E5E5 solid;
-        }
-        .item:last-child{
-            border: 0;
+            padding: 44px 0 20px 0;
+            margin-top: 42px;
+            background-color: white;
+            margin-bottom: 15px;
         }
         #title{
-            font-size: 15px;
-            color: #333;
-            margin-bottom: 6px;
+            font-size: 18px;
+            background-color: #879EFF;
+            color: #fff;
+            position: absolute;
+            top: -66px;
+            left: 0;
+            width: 505px;
+            border-radius: 4px;
+            line-height: 48px;
+            padding: 0 22px;
+            box-sizing: border-box;
         }
         #main_teacher_name,#union_teacher_name{
-            margin-bottom: 6px;
+            margin-bottom: 16px;
         }
         #loading{
             font-size: 14px;
@@ -70,28 +89,41 @@
         }
         .rightCont{
             position: relative;
+            padding-left: 18px;
         }
         .joinBtn{
             position: absolute;
             right: 0;
             top: 50%;
-            border: 1px #0084FF solid;
-            color: #0084FF;
-            padding: 5px 10px;
+            color: #fff;
+            width: 118px;
+            line-height: 42px;
+            font-size: 16px;
+            padding-left: 31px;
+            box-sizing: border-box;
             -webkit-transform: translateY(-50%);
             -moz-transform: translateY(-50%);
             -ms-transform: translateY(-50%);
             -o-transform: translateY(-50%);
             transform: translateY(-50%);
             cursor: pointer;
+            background: -webkit-linear-gradient(left, #5581F1 , #1153FC); /* Safari 5.1 - 6.0 */
+            background: -o-linear-gradient(right, #5581F1, #1153FC); /* Opera 11.1 - 12.0 */
+            background: -moz-linear-gradient(right, #5581F1, #1153FC); /* Firefox 3.6 - 15 */
+            background: linear-gradient(to right, #5581F1 , #1153FC); /* 标准的语法 */
+            border-top-left-radius:21px;
+            border-bottom-left-radius:21px;
         }
 
     </style>
 </head>
 
 <body>
+<div class="topDiv">
+    <h1>正在开课</h1>
+    <span class="courseBtn" onclick="openUnionClass();">开启联合开课</span>
+</div>
 
-<span class="courseBtn" onclick="openUnionClass();">开启联合开课</span>
 
 <div id="item_container">
 
