--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -41,7 +41,7 @@
             -moz-border-radius: 4px;
             border-radius: 4px;
             float: right;
-
+            cursor: pointer;
         }
         #item_container{
             height: calc(100% - 68px);
