--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -77,6 +77,9 @@
             line-height: 48px;
             padding: 0 22px;
             box-sizing: border-box;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
         }
         #main_teacher_name,#union_teacher_name{
             margin-bottom: 16px;
@@ -139,8 +142,8 @@
             <div id="main_teacher_name">张三</div>
             <div id="union_teacher_name">李四-王五</div>
             <div id="start_time">开课时间：2018-10-10 09:25</div>
-            <div id="join_class" class="joinBtn">加入课堂</div>
         </div>
+        <div id="join_class" class="joinBtn">加入课堂</div>
     </div>
 </div>
 </body>
