--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -60,7 +60,7 @@ $(function(){
                    var uuid = data.uuid;
 //                   var user = data.user;
                    if(uuid == machineId){
-                      window.location.href = 'http://www.maaee.com/openvidu/schoolClass/syncClassroom.html?teacherId='+data.user.colUid+'&teacherName='+data.user.userName+'';
+                      window.location.href = 'https://www.maaee.com/openvidu/schoolClass/syncClassroom.html?teacherId='+data.user.colUid+'&teacherName='+data.user.userName+'';
                    }else{}
                    console.log("data==============>"+JSON.stringify(data.user));
 //
@@ -115,7 +115,7 @@ $(function(){
                  console.log(res);
                  if(res.success){
                      console.log('登录成功');
-                     window.location.href = 'http://www.maaee.com/openvidu/schoolClass/syncClassroom.html?teacherId='+res.response.colUid+'&teacherName='+res.response.userName+'';
+                     window.location.href = 'https://www.maaee.com/openvidu/schoolClass/syncClassroom.html?teacherId='+res.response.colUid+'&teacherName='+res.response.userName+'';
 
                  }else{
                      alert('用户不存在');
