--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -61,7 +61,7 @@ $(function(){
 
         // $('#classInfo_iframe').attr('src','http://127.0.0.1:5000/schoolClass/unionClassList.html?teacherId='+teacherId+'&teacherName='+teacherName+'')
     $('#classInfo_iframe').attr('src','https://www.maaee.com/openvidu/schoolClass/unionClassList.html?teacherId='+teacherId+'&teacherName='+teacherName+'')
-    $('#myFile_iframe').attr('src','http://jiaoxue.maaee.com:8091/#/antPlate?ident='+teacherId+'&fileId=-1&title=蚁盘题目&phoneType=0')
+    $('#myFile_iframe').attr('src','https://jiaoxue.maaee.com:8099/#/antPlate?ident='+teacherId+'&fileId=-1&title=蚁盘题目&phoneType=0')
 
     $('#classInfo').on('click',function(){
         $('#classInfo').addClass('active');
