--- a/public/schoolClass/joinDialog.html
+++ b/public/schoolClass/joinDialog.html
@@ -9,7 +9,7 @@
     <style>
 
         .modalCont{
-            padding-left: 52px;
+            padding-left: 20px;
             padding-top: 20px;
         }
         .title{
@@ -42,14 +42,17 @@
         #class_container{
             font-size: 14px;
             color: #666;
-            padding-left: 4px;
-            width: 300px;
+            width: 175px;
             height: 136px;
             overflow-y: auto;
         }
         .classItem{
             margin-bottom: 14px;
             cursor: pointer;
+            overflow: hidden;
+            -o-text-overflow: ellipsis;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
         .classItem i{
             border: 1px #E5E5E5 solid;
