--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -106,6 +106,7 @@
             text-align: center;
             color: #666;
             width: 210px;
+            font-size: 14px;
         }
         .emptyCont img{
             width: 100%;
