--- a/public/schoolClass/login.html
+++ b/public/schoolClass/login.html
@@ -36,7 +36,7 @@
 </div>
 
 </body>
-<script src="./js/jquery-3.2.1.min.js"></script>
+<script src="./js/jquery.min.js"></script>
 <script src="./js/simple.js"></script>
 <script type="text/javascript">
 $(function(){
@@ -115,7 +115,7 @@ $(function(){
                  console.log(res);
                  if(res.success){
                      console.log('登录成功');
-                     window.location.href = 'https://www.maaee.com/openvidu/schoolClass/syncClassroom.html?teacherId='+res.response.colUid+'&teacherName='+res.response.userName+'';
+                     window.location.href = 'syncClassroom.html?teacherId='+res.response.colUid+'&teacherName='+res.response.userName+'';
 
                  }else{
                      alert('用户不存在');
