--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -47,7 +47,7 @@
 </div>
 
 </body>
-<script src="./js/jquery-3.2.1.min.js"></script>
+<script src="./js/jquery.min.js"></script>
 <script type="application/javascript" src="js/layer/layer.js"></script>
 <script type="application/javascript" src="js/service.js"></script>
 <script >
